# mpc-wallet-prod

./: .gitignore  BENCHMARK_COMPARISON.md  BENCHMARK_INSTRUCTIONS.md  BENCHMARK_README.md  CLI_IMPLEMENTATION_SUMMARY.md  INTEGRATION-PLAN.md  MIGRATION_TO_EVENT_DRIVEN.md  PROJELER-OZET.md  RENAME_INSTRUCTIONS.md  rename_projects.sh  transformation_plan.md
benchmark-suite/: BENCHMARK_REPORT.md  BENCHMARK_SUMMARY.md  Cargo.toml  README.md  analyze_results.py  run_benchmarks.sh  run_simple_benchmark.sh  simple_benchmark_results.txt
benchmark-suite/benches/: network_throughput.rs
benchmark-suite/src/: integration_bench.rs  lib.rs  main.rs
mtls-comm/: Cargo.toml  README.md  docker-compose.yml
mtls-comm/certs/: ca.crt  ca.key  ca.srl  node1.crt  node1.key  node2.crt  node2.key  node3.crt  node3.key  node4.crt  node4.key  node5.crt  node5.key
mtls-comm/config/: default.toml
mtls-comm/crates/consensus/: Cargo.toml
mtls-comm/crates/consensus/src/: byzantine.rs  vote_processor.rs
mtls-comm/crates/crypto/: Cargo.toml
mtls-comm/crates/crypto/src/: lib.rs
mtls-comm/crates/network/: Cargo.toml
mtls-comm/crates/network/src/: broadcast.rs  cert_manager.rs  lib.rs  mesh.rs  messages.rs  mtls_node.rs
mtls-comm/crates/storage/: Cargo.toml
mtls-comm/crates/storage/src/: etcd.rs  garbage_collector.rs  lib.rs  postgres.rs
mtls-comm/crates/types/src/: lib.rs
mtls-comm/docker/: Dockerfile.node  Dockerfile.prebuilt
mtls-comm/scripts/: generate-certs.sh
mtls-comm/src/: app.rs  benchmark.rs  cli.rs  config.rs  main.rs  network_benchmark.rs
p2p-comm/: .dockerignore  CONSENSUS_EXPLAINED_SIMPLE.md  CURRENT_IMPLEMENTATION_STATUS.md  Cargo.toml  DOCKER_TEST_REPORT.md  Dockerfile  FINAL_COMPLETION_STATUS.md  FINAL_STATUS.md  IMPLEMENTATION_PROGRESS.md  IMPLEMENTATION_STATUS.md  P2P_TEST_PLAN.md  PEER_TO_PEER_COMMUNICATION.md  PROJECT_STRUCTURE.txt  QUICKSTART-WINDOWS.md  QUICKSTART.md  QUICKTEST.md  QUICK_REFERENCE.md  README.md  SECURITY_COMPARISON.md  SECURITY_TESTING.md  SYSTEM_COMPLETE.md  SYSTEM_FLOW_AND_NOISE_IMPLEMENTATION.md  TEST_COMMANDS.md  docker-compose.yml  guide.tex  rebuild.ps1
p2p-comm/.claude/: settings.local.json
p2p-comm/config/: default.toml
p2p-comm/crates/consensus/src/: fsm.rs  lib.rs
p2p-comm/crates/network/: Cargo.toml
p2p-comm/crates/network/src/: behavior.rs  lib.rs  messages.rs  node.rs  request_response.rs
p2p-comm/crates/storage/src/: postgres.rs
p2p-comm/crates/types/: Cargo.toml
p2p-comm/crates/types/src/: lib.rs
p2p-comm/scripts/: init-db.sh  setup-protobuf.ps1  setup-protobuf.sh  test-scenario.ps1  test-scenario.sh
p2p-comm/src/: app.rs  benchmark.rs  cli.rs  config.rs  main.rs
production/crates/api/: Cargo.toml
production/crates/api/src/: error.rs  lib.rs  metrics.rs  state.rs
production/crates/bitcoin/: Cargo.toml  README.md
production/crates/bitcoin/src/: client.rs  lib.rs  tx_builder.rs  types.rs
production/crates/cli/: Cargo.toml  IMPLEMENTATION.md  QUICK_REFERENCE.md  README.md
production/crates/cli/examples/: demo.ps1  demo.sh
production/crates/cli/src/: client.rs  config.rs  main.rs  output.rs
production/crates/consensus/: Cargo.toml
production/crates/consensus/src/: byzantine.rs  fsm.rs  lib.rs  vote_processor.rs
production/crates/network/: Cargo.toml
production/crates/network/src/: error.rs  lib.rs  peer_registry.rs  quic_engine.rs  quic_listener.rs  quic_session.rs
production/crates/orchestrator/: Cargo.toml
production/crates/orchestrator/src/: auto_voter.rs  aux_info_service.rs  dkg_service.rs  error.rs  health_checker.rs  heartbeat_service.rs  lib.rs  message_router.rs  metrics.rs  presig_service.rs  protocol_router.rs  service.rs  signing_coordinator.rs
production/crates/protocols/: Cargo.toml
production/crates/protocols/src/: lib.rs
production/crates/security/: Cargo.toml
production/crates/security/src/: cert_manager.rs  integration.rs  lib.rs  tls_config.rs
production/crates/storage/: Cargo.toml
production/crates/storage/src/: etcd.rs  lib.rs  postgres.rs
production/crates/types/: Cargo.toml
production/crates/types/src/: lib.rs
production/e2e/: .github_workflows_e2e.yml.example  Cargo.toml  IMPLEMENTATION_SUMMARY.md  INDEX.md  QUICKSTART.md  README.md  TESTING_STRATEGY.md  benchmarks.rs  byzantine_scenarios.rs  certificate_rotation.rs  cluster_setup.rs  concurrency.rs  docker-compose.e2e.yml  fault_tolerance.rs  network_partition.rs  run_e2e_tests.sh  transaction_lifecycle.rs
production/e2e/common/: api_client.rs  assertions.rs  cluster.rs  docker_compose.rs  helpers.rs  mod.rs
threshold-signing (Copy)/node/: Cargo.toml  Dockerfile
threshold-signing (Copy)/node/src/: http_transport.rs  keygen.rs  main.rs  message_board_client.rs  presignature.rs  presignature_pool.rs  signing.rs  signing_fast.rs
torcus-wallet/: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  docker-compose.yml
torcus-wallet/.github/workflows/: ci.yml
torcus-wallet/crates/chains/: Cargo.toml
torcus-wallet/crates/chains/src/: lib.rs
torcus-wallet/crates/cli/: Cargo.toml
torcus-wallet/crates/cli/src/: main.rs
torcus-wallet/crates/common/: Cargo.toml
torcus-wallet/crates/common/src/: bitcoin_tx.rs  bitcoin_utils.rs  discovery.rs  grant.rs  lib.rs  protocol.rs  selection.rs  storage.rs
torcus-wallet/crates/coordinator/: Cargo.toml
torcus-wallet/crates/coordinator/src/: bitcoin_client.rs  bitcoin_handlers.rs  cert_handlers.rs  grant_handlers.rs  handlers.rs  health_checker.rs  main.rs  registry.rs  registry_handlers.rs  relay_handlers.rs  state.rs
torcus-wallet/crates/node/: Cargo.toml
torcus-wallet/crates/protocols/: Cargo.toml
torcus-wallet/docker/: Dockerfile.coordinator  Dockerfile.node
torcus-wallet/docs/: COORDINATOR-NODE-ARCHITECTURE.md  ETHEREUM-SUPPORT.md  NODE-INVARIANTS.md  P2P-MIGRATION-ROADMAP.md
torcus-wallet/scripts/: start-regtest.sh  start-testnet.sh  start.sh  stop.sh  test-p2p-signing.sh  verify.sh
torcus-wallet/ui/: README.md  package.json  server.js
torcus-wallet/ui/public/: app.js  index.html
(+217 files in other folders)
