[package]
name = "mpc-benchmark-suite"
version = "0.1.0"
edition = "2021"

[dependencies]
# Benchmark framework
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
tokio = { version = "1.35", features = ["full", "test-util"] }

# Metrics collection
prometheus = "0.13"
sysinfo = "0.30"
histogram = "0.10"

# Data serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Utilities
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
colored = "2.1"

# HTTP client for testing
reqwest = { version = "0.11", features = ["json"] }

# Statistical analysis
statistical = "1.0"

[[bench]]
name = "network_throughput"
harness = false
