[package]
name = "threshold-voting-system"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[dependencies]
threshold-types = { path = "crates/types" }
threshold-crypto = { path = "crates/crypto" }
threshold-storage = { path = "crates/storage" }
threshold-network = { path = "crates/network" }
threshold-consensus = { path = "crates/consensus" }

tokio = { workspace = true }
libp2p = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
chrono = { workspace = true }

[workspace]
members = [
    "crates/network",
    "crates/storage",
    "crates/consensus",
    "crates/types",
    "crates/crypto",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# libp2p networking stack
libp2p = { version = "0.53", features = [
    "noise",           # Noise protocol for encryption
    "tcp",             # TCP transport
    "gossipsub",       # GossipSub for broadcast
    "kad",             # Kademlia DHT for peer discovery
    "identify",        # Peer identification
    "ping",            # Keepalive
    "yamux",           # Stream multiplexing
    "dns",             # DNS resolution
    "tokio",           # Tokio runtime
    "request-response",  # P2P direct messaging
] }

# etcd client
etcd-client = "0.13"

# PostgreSQL
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-chrono-0_4"] }
deadpool-postgres = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Cryptography
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.22"
opentelemetry = { version = "0.21", features = ["trace"] }
opentelemetry-jaeger = "0.20"

# Metrics
prometheus = "0.13"

# Configuration
config = "0.14"
toml = "0.8"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Testing
mockall = "0.12"

# CLI
clap = { version = "4.4", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
