[package]
name = "threshold-consensus"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
threshold-types = { path = "../types" }
threshold-crypto = { path = "../crypto" }
threshold-storage = { path = "../storage" }
threshold-network = { path = "../network" }
tokio.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
