[package]
name = "threshold-network"
version.workspace = true
edition.workspace = true

[dependencies]
# mTLS core
rustls = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
x509-parser = { workspace = true }

# Async runtime
tokio = { workspace = true }
tokio-stream = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }

# Internal
threshold-types = { path = "../types" }
