[package]
name = "threshold-network"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
threshold-types = { path = "../types" }
threshold-crypto = { path = "../crypto" }
libp2p = { workspace = true, features = ["macros"] }
tokio.workspace = true
tokio-util.workspace = true
futures.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
bincode.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
