[package]
name = "protocols"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
hex.workspace = true
thiserror.workspace = true
anyhow.workspace = true
reqwest.workspace = true
futures.workspace = true
chrono.workspace = true

# CGGMP24 Threshold ECDSA
generic-ec.workspace = true
rand.workspace = true
rand_core.workspace = true
rand_chacha.workspace = true
sha2.workspace = true
cggmp24.workspace = true
cggmp24-keygen.workspace = true
key-share.workspace = true
round-based.workspace = true

# FROST Threshold Schnorr
givre.workspace = true

# For primes serialization
bincode = "1.3"
base64 = "0.22"

# Async channels for message passing
async-channel = "2.5"

# Async trait support
async-trait = "0.1"

# Pin projection for Stream/Sink implementations
pin-project-lite = "0.2"

# UUID for unique IDs
uuid.workspace = true

# QUIC transport
quinn.workspace = true
rustls.workspace = true
rcgen.workspace = true

# X.509 certificate parsing (for extracting party index from peer certs)
x509-parser = "0.16"
oid-registry = "0.7"

# Ed25519 signatures (for grant verification)
ed25519-dalek.workspace = true

[dev-dependencies]
uuid = { version = "1.0", features = ["v4"] }
