[package]
name = "threshold-security"
version.workspace = true
edition.workspace = true

[dependencies]
# TLS and certificate handling
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2.0"
x509-parser = "0.16"
rcgen = "0.13"

# QUIC integration
quinn = "0.11"

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
