[package]
name = "threshold-storage"
version.workspace = true
edition.workspace = true

[dependencies]
threshold-types = { path = "../types" }

tokio = { workspace = true }
tokio-postgres = { workspace = true }
deadpool-postgres = { workspace = true }
etcd-client = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
