[package]
name = "chains"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
bitcoin.workspace = true
sha2.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
tracing.workspace = true
thiserror.workspace = true
generic-ec.workspace = true

# For HD wallet derivation
hmac = "0.12"
ripemd = "0.1"
