[package]
name = "common"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
thiserror.workspace = true
bitcoin.workspace = true
sha2.workspace = true
hex.workspace = true
tracing.workspace = true
generic-ec.workspace = true
hmac = "0.12"
ripemd = "0.1"
rusqlite = { version = "0.38", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
