[package]
name = "node"
version.workspace = true
edition.workspace = true

[[bin]]
name = "node"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
protocols = { path = "../protocols" }
tokio.workspace = true
axum.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
anyhow.workspace = true
hex.workspace = true

# CGGMP24 Threshold ECDSA
generic-ec.workspace = true
rand.workspace = true
rand_core.workspace = true
rand_chacha.workspace = true
sha2.workspace = true
futures.workspace = true
tokio-stream.workspace = true
cggmp24.workspace = true
cggmp24-keygen.workspace = true
key-share.workspace = true
round-based.workspace = true
givre.workspace = true

# For address derivation
bitcoin.workspace = true

# For timestamps
chrono = { version = "0.4", features = ["serde"] }

# For primes serialization
bincode = "1.3"
base64 = "0.22"

# Async channels for message passing
async-channel = "2.5"

# Pin projection for Stream/Sink implementations
pin-project-lite = "0.2"

# HTTP client for relay
reqwest.workspace = true

# Ed25519 for grant verification
ed25519-dalek.workspace = true

# Note: libp2p can be added later for peer-to-peer networking
# Currently using HTTP relay through coordinator instead
